# invoq

./: Anchor.toml  Cargo.toml  README.md  rustfmt.toml
programs/invoked/: Cargo.toml
programs/invoked/src/: lib.rs
programs/invoked2/: Cargo.toml
programs/invoked2/src/: lib.rs
programs/invokee/: Cargo.toml
programs/invokee/src/: lib.rs
